@@ -1,3 +1,11 @@
+2012-12-20  Niels Möller  <nisse@lysator.liu.se>
+
+	From Tim Rühsen:
+	* testsuite/des-compat-test.c (pt): Use proper prototype, use
+	const.
+	* testsuite/testutils.c (test_dsa_key): Deleted spurious
+	semicolon.
+
 2012-12-15  Niels Möller  <nisse@lysator.liu.se>
 
 	From Alon Bar-Lev:
